2004-02-07 Damien Sandras  <dsandras@seconix.com>

	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h:
	Added functions for floats.
	
	* src/gdkvideoio.cpp, src/menu.cpp: Fixed fullscreen mode and only
	automatically start in fullscreen mode if the gconf key tells to do it.

	* src/tools.cpp: Fixed spacings in the calls history to be more HIG 
	compliant.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Ignore forwarding on empty URLs.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* src/tray.h: Fixed bug in previous commit. What happens with CVS?

2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* src/tray.cpp, src/tray.h: Fixed bug in previous commit.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* pixmaps/status-busy-16.png: Committed again.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* lib/gtk-text-buffer-addon.h, lib/widgets/gtklevelmeter.h: 
	Fixed compilation warnings.
	
	* lib/stock-icons.c, lib/stock-icons.h, pixmaps/Makefile.am,
	pixmaps/status-busy-16.png, pixmaps/status-forward-16.png,
	pixmaps/status-free-for-chat-16.png, pixmaps/status-in-a-call-16.png,
	pixmaps/status-occupied-16.png: Added status icons thanks to
	the work of Jakub Steiner, thanks Jimmac !

	* src/config.cpp, src/endpoint.cpp, src/gnomemeeting.cpp,
	src/ils.cpp, src/main_window.cpp, src/tray.cpp, src/tray.h:
	Added new status icons from Jakub Steiner. Revised the tray icon
	code so that it is updated accurately following the current
	incoming call state, the current calling state and the forward
	on busy value.
	
2004-02-01 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Removed unuseful check.
	
2004-02-01 Damien Sandras  <dsandras@seconix.com>

	* lib/dialog.c, lib/gconf_widgets_extensions.c,
	lib/gconf_widgets_extensions.h, lib/gnome_prefs_window.c,
	lib/gnome_prefs_window.h, lib/gtk-text-buffer-addon.c,
	lib/gtk_menu_extensions.c, lib/widgets/gmentrydialog.c,