@@ -1,5 +1,10 @@
 2004-02-07 Damien Sandras  <dsandras@seconix.com>
 
+	* src/endpoint.cpp, src/gnomemeeting.cpp: Make sure gnomemeeting
+	doesn't crash if the user is doing stupid things with keys.
+	
+2004-02-07 Damien Sandras  <dsandras@seconix.com>
+
 	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h:
 	Added functions for floats.
 	
